# 42sh

./: AUTHORS  GRAMMAR  Makefile.am  README  TODO  bootstrap  configure.ac  meson.build
doc/: 42sh.1  Makefile.am  doxyfile  xcu_chap02.html
src/: Makefile.am  last-ast.sh
src/alias/: alias.c  alias.h
src/ast/: ast.h  ast_and.c  ast_bang.c  ast_case.c  ast_cmd.c  ast_destruct.c  ast_for.c  ast_funcdec.c  ast_if.c  ast_or.c  ast_pipe.c  ast_print.c  ast_red.c  ast_sep.c  ast_sepand.c  ast_subshell.c  ast_until.c  ast_while.c
src/builtin/: builtin.c  builtin.h  builtin_alias.c  builtin_cd.c  builtin_doubledot.c  builtin_echo.c  builtin_exec.c  builtin_exit.c  builtin_export.c  builtin_funclist.c  builtin_history.c  builtin_set.c  builtin_shopt.c  builtin_simpledot.c  builtin_source.c  builtin_unalias.c  builtin_unset.c  builtin_varlist.c
src/common/: basename.c  common.h  constant.h  env.c  function.h  getcwd2.c  isdigitstr.c  macro.h  strmerge.c  strndup.c  strvectoradd.c  strvmerge.c
src/exec/: exec.h  exec_and.c  exec_ast.c  exec_bang.c  exec_case.c  exec_cmd.c  exec_for.c  exec_funcdec.c  exec_if.c  exec_line.c  exec_node.c  exec_or.c  exec_pipe.c  exec_red.c  exec_sep.c  exec_sepand.c  exec_sepsemicolon.c  exec_start.c  exec_subshell.c  exec_until.c  exec_while.c
src/lexer/: lexer.h
src/opt/: opt.c  opt.h  opt_init.c  opt_parser.c
src/option/: option.c  option.h  option_parser.c
src/parser/: alias.c  alias.h  getline.c  getline.h  getln.c  getln.h  lexer.c  parser.c  parser.h
src/readline/: getln.c  readline.c  readline.h
src/shell/: alias.c  alias.h  func.c  func.h  getoptions.c  option.c  option.h  prompt.c  shell.c  shell.h  shell_destroy.c  shell_entry.c  shell_getopt.c  shell_init.c  shell_prompt.c  strmerges.c  var.c  var.h
test/exec/: and_1.sh  or_1.sh
test/parse/: moulette.sh
test/parse/bad/: compoundlist_1.sh  eof.sh  freetext.sh  if_1.sh
test/parse/good/: big_1.sh  brace_1.sh  case_1.sh  funcdec.sh  heredocs.sh  if_1.sh  if_2.sh  if_3.sh  if_4.sh  sheebang.sh  simple_for.sh
tools/: args  last-ast.sh
